added method for update e find by priority and Category